# matura-project

./: .gitignore  CMakeLists.txt  README.md
src/: Main.c
src/Headers/: Camera.h  Game.h  Graphics.h
src/Shaders/: default.frag  default.vert  light.vert
src/Sources/: Camera.c  Camera.h  Game.c  Graphics.c
src/Utils/: File.c  File.h  Image.c  Image.h
